feat: adds timezone offset and refactors [x] fix rest doc [x] refactor rest json attributes (removes some omitempty) [x] docker-compose cleanup
